Fix scrollbar

--- a/src/webview.css
+++ b/src/webview.css
@@ -18,7 +18,7 @@ span {
   height: 4px;
   width: 4px;
 }
-::-webkit-scrollbar-track {
+::-webkit-scrollbar-thumb {
   background: rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
